Base examples setup for e2e tests and development

--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "build:browser": "rollup --config build/rollup.config.browser.js",
     "build:es": "rollup --config build/rollup.config.es.js",
     "build:umd": "rollup --config build/rollup.config.umd.js",
+    "serve:examples": "cd examples && yarn build && yarn serve",
     "prepublishOnly": "yarn test && yarn build",
     "dev": "nodemon --exec 'yarn build:es && yarn build:umd' --watch src --watch build",
-    "test": "yarn build && yarn test:eslint",
-    "test:eslint": "eslint --ext .js,.vue '{src,build}/**/*.js' 'examples/**/*.{js,vue}'"
+    "dev:examples": "cd examples && yarn dev",
+    "test": "yarn build && yarn lint && yarn test:e2e",
+    "test:e2e": "start-server-and-test serve:examples http://localhost:4000/.server-health test:e2e:cypress",
+    "test:e2e:cypress": "yarn cypress run",
+    "lint": "eslint --ext .js,.vue '{src,build}/**/*.js' 'examples/**/*.{js,vue}'"
   },
   "author": "Artur Rosa <rossinek@gmail.com> (arturrosa.pl)",
   "license": "MIT",
@@ -28,8 +32,10 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "babel-eslint": "^10.0.3",
+    "cypress": "^3.7.0",
     "eslint": "^6.7.1",
     "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
@@ -42,6 +48,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-uglify": "^6.0.3",
+    "start-server-and-test": "^1.10.6",
     "uglify-es": "^3.3.9"
   }
 }
