--- a/examples/package.json
+++ b/examples/package.json
@@ -6,17 +6,19 @@
   "author": "Artur Rosa <rossinek@gmail.com> (arturrosa.pl)",
   "license": "MIT",
   "scripts": {
-    "example": "concurrently --kill-others \"poi -s $EXAMPLE/index.js --no-clear-console\" \"nodemon --watch $EXAMPLE $EXAMPLE/server.js $EXAMPLE/server.js\"",
-    "example:nesting": "EXAMPLE=nesting yarn example"
+    "build": "node build.js",
+    "serve": "concurrently --kill-others \"nodemon --watch server.js server.js\" \"nodemon --watch api api/index.js\"",
+    "dev": "concurrently --kill-others \"poi -s --no-clear-console\" \"nodemon --watch api api/index.js\""
   },
   "dependencies": {
     "axios": "^0.19.0",
     "concurrently": "^5.0.0",
+    "express": "^4.17.1",
     "json-server": "^0.15.1",
     "nodemon": "^2.0.1",
     "poi": "^12.7.3",
     "vue": "^2.6.10",
-    "vue-jsonapi": "file:../",
+    "vue-jsonapi": "link:..",
     "vue-template-compiler": "^2.6.10"
   }
 }
