--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "vue",
     "jsonapi"
   ],
-  "peerDependencies": {
-    "vue": "^2.6.10"
-  },
+  "peerDependencies": {},
   "devDependencies": {
     "@babel/core": "^7.7.4",
     "@babel/plugin-transform-modules-commonjs": "^7.7.4",
