--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
     "build:browser": "rollup --config build/rollup.config.browser.js",
     "build:es": "rollup --config build/rollup.config.es.js",
     "build:umd": "rollup --config build/rollup.config.umd.js",
-    "serve:examples": "cd examples && yarn build && yarn serve",
     "prepublishOnly": "yarn test && yarn build",
     "dev": "nodemon --exec 'yarn build:es && yarn build:umd' --watch src --watch build",
     "dev:examples": "cd examples && yarn dev",
-    "test": "yarn build && yarn lint && yarn test:unit && yarn test:e2e",
-    "test:e2e": "start-server-and-test serve:examples http://localhost:4000/.server-health test:e2e:cypress",
-    "test:e2e:cypress": "yarn cypress run",
-    "test:unit": "yarn jest",
-    "lint": "eslint --ext .js,.vue '{src,build}/**/*.js' 'examples/**/*.{js,vue}'"
+    "test": "yarn build && yarn test:lint && yarn test:unit && yarn test:e2e",
+    "test:e2e": "cd tests && yarn e2e",
+    "test:unit": "cd tests && yarn unit",
+    "test:lint": "eslint --ext .js,.vue '{src,build}/**/*.js' 'examples/**/*.{js,vue}'"
   },
   "author": "Artur Rosa <rossinek@gmail.com> (arturrosa.pl)",
   "license": "MIT",
@@ -26,15 +24,13 @@
     "vue",
     "jsonapi"
   ],
-  "peerDependencies": {},
+  "peerDependencies": {
+    "vue": "^2.6.10"
+  },
   "devDependencies": {
     "@babel/core": "^7.7.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
-    "@types/jest": "^24.0.23",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
-    "cypress": "^3.7.0",
     "eslint": "^6.7.1",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-cypress": "^2.7.0",
@@ -44,7 +40,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.0.1",
-    "jest": "^24.9.0",
     "nodemon": "^2.0.1",
     "rollup": "^1.27.5",
     "rollup-plugin-babel": "^4.3.3",
@@ -52,8 +47,6 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-uglify": "^6.0.3",
-    "start-server-and-test": "^1.10.6",
-    "uglify-es": "^3.3.9",
-    "vue": "^2.6.10"
+    "uglify-es": "^3.3.9"
   }
 }
