add global loading and pollInterval

--- a/examples/package.json
+++ b/examples/package.json
@@ -6,9 +6,9 @@
   "author": "Artur Rosa <rossinek@gmail.com> (arturrosa.pl)",
   "license": "MIT",
   "scripts": {
-    "build": "BUILD=true node build.js",
+    "build": "node build.js",
     "serve": "yarn build && concurrently --kill-others \"nodemon --watch server.js server.js\" \"nodemon --watch api api/index.js\"",
-    "dev": "concurrently --kill-others \"poi -s --no-clear-console\" \"nodemon --watch api api/index.js\""
+    "dev": "DEV=true concurrently --kill-others \"poi -s --no-clear-console\" \"nodemon --watch api api/index.js\""
   },
   "dependencies": {
     "axios": "^0.19.0",
