--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-jsonapi",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Vue integration with JSON:API strongly inspired by vue-apollo",
   "main": "dist/vue-jsonapi.umd.js",
   "module": "dist/vue-jsonapi.esm.js",
@@ -24,6 +24,9 @@
     "vue",
     "jsonapi"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "vue": "^2.6.10"
   },
