add installation paragraph

--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "vue",
     "jsonapi"
   ],
+  "homepage": "https://github.com/rossinek/vue-jsonapi#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rossinek/vue-jsonapi.git"
+  },
   "publishConfig": {
     "access": "public"
   },
